Improve efficiency of Opus Quad check
Switch to simple final boolean fields to avoid potential for
denial of service attacks by depleting the constant pool
by sending random strings for each device name.
Also continuing updates to take advantage of the newer
Java version we build against, fix typos in documentation, and
switch to explicit API annotations to indicate project entry
points.